fix phone layout for header and dialog, and align multi line item text

--- a/src/styles/DataItemsAccordion.module.scss
+++ b/src/styles/DataItemsAccordion.module.scss
@@ -7,12 +7,23 @@
   .AccordionHeader {
     display: flex;
     cursor: pointer;
+
+    .BookmarkContainer {
+      width: 20px;
+      flex: 0;
+    }
   }
   .AccordionTrigger {
     all: unset;
-    display: block;
+    display: flex;
     font-size: 1.3em;
     margin-bottom: 10px;
+
+    .ChevronContainer {
+      width: 20px;
+      flex: 0;
+      margin-right: 3px;
+    }
   }
 
   .AccordionContent {
