--- a/src/styles/LoginSignupDialog.module.scss
+++ b/src/styles/LoginSignupDialog.module.scss
@@ -1,6 +1,6 @@
 .LoginSignupDialogContent {
   width: 500px;
-  max-width: 500px;
+  max-width: 90%;
   max-height: 85vh;
   height: auto;
 }
